@@ -3,7 +3,7 @@
 require_relative 'spec_helper'
 
 describe 'Asciidoctor::PDF::Converter - Audio' do
-  it 'should replace audio block with right pointer, absolute path to audio file, and audio label' do
+  it 'should replace audio block with right pointer, path to audio file, and audio label' do
     expected_lines = [
       'before',
       %(\u25ba\u00a0#{fixture_file 'podcast.mp3'} (audio)),
@@ -23,6 +23,16 @@ describe 'Asciidoctor::PDF::Converter - Audio' do
     audio_text = (pdf.find_text %r/\(audio\)/)[0]
     after_text = (pdf.find_text 'after')[0]
     (expect ((before_text[:y] - audio_text[:y]).round 2)).to eql ((audio_text[:y] - after_text[:y]).round 2)
+  end
+
+  it 'should wrap text for audio if it exceeds width of content area' do
+    pdf = to_pdf <<~'EOS', analyze: true, attribute_overrides: { 'imagesdir' => '' }
+    audio::a-podcast-with-an-excessively-long-and-descriptive-name-as-they-sometimes-are-that-causes-the-text-to-wrap.mp3[]
+    EOS
+
+    (expect pdf.pages).to have_size 1
+    lines = pdf.lines pdf.find_text page_number: 1
+    (expect lines).to eql [%(\u25ba\u00a0a-podcast-with-an-excessively-long-and-descriptive-name-as-they-sometimes-are-that-causes-the-), 'text-to-wrap.mp3 (audio)']
   end
 
   it 'should use font-based icon for play symbol if font icons are enabled' do
