@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to the {project-name} by release.
 For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.
 
+== Unreleased
+
+Bug Fixes::
+
+* allow alt text for block image, video, and audio to wrap to next line on same page (#2258)
+
 == 2.1.3 (2022-06-23) - @mojavelinux
 
 Bug Fixes::
